moc: don't use const_cast in qt_metacast generated code

qt_metacast is not const so there is no need to use const_cast.
This fixes a warning in generated code.

Task-number: QTBUG-63352
Change-Id: I0c37442ac268a654316bc0e7e04f77fb51cae019
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>